# fbedge-examples

./: .gitignore  MANIFEST.in  README.md  __init__.py  examples.ipynb  iot_deployment.py  pyproject.toml  requirements.txt  setup.py  video_capture.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
examples/: deploy_model.py  quickstart.ipynb  view_stream.py
src/factbird_byom/: __init__.py  cli.py  client.py  config.py  deployment.py  exceptions.py  streams.py
src/factbird_byom/_internal/: boto.py
tests/unit/: conftest.py  test_deployment.py  test_streams.py
