[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fbedge-examples"
version = "1.0.0"
authors = [
    {name = "Claude Code Assistant"},
]
description = "Edge AI Examples with AWS Integration"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["edge-ai", "video-streaming", "hailo", "computer-vision"]

# Core dependencies
dependencies = [
    "boto3>=1.28.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipython>=8.0.0",
    "matplotlib>=3.0.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
]