[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factbird-byom"
version = "0.1.0"
description = "Python SDK for the Factbird Edge BYOM feature — deploy your own compiled model, view your device's live stream."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Factbird", email = "support@factbird.com" }]
keywords = ["factbird", "edge", "byom", "kvs", "iot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "moto[s3,kinesisvideo]>=5.0",
    "mypy>=1.8",
    "ruff>=0.5",
    "boto3-stubs[s3,kinesisvideo,kinesis-video-archived-media]>=1.34",
]
examples = [
    "jupyter>=1.0",
]

[project.scripts]
factbird-byom = "factbird_byom.cli:main"

[project.urls]
Homepage = "https://github.com/FactbirdHQ/fbedge-examples"
Issues = "https://github.com/FactbirdHQ/fbedge-examples/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/factbird_byom"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/factbird_byom"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
